перешёл на библиотеку классов

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -340,18 +340,18 @@
 **** xref:samples/solution/card-lib/service.adoc[]
 **** xref:samples/solution/card-lib/card-component.adoc[]
 **** xref:samples/solution/card-lib/lib-component.adoc[]
-*** xref:CreatePackages.adoc[]
-*** xref:CreateSnapIn.adoc[]
-**** xref:CreateSnapIn_Interface.adoc[]
-**** xref:CreateSnapIn_Control.adoc[]
-*** xref:CreateInstaller.adoc[]
-**** xref:CreateInstaller_Client.adoc[]
-**** xref:CreateInstaller_Server.adoc[]
-*** xref:UpdateSolution.adoc[]
-*** xref:License.adoc[]
+*** xref:samples/solution/card-sql-package.adoc[]
+*** xref:samples/solution/snap-in/new-snap-in.adoc[]
+**** xref:samples/solution/snap-in/standard-interfaces.adoc[]
+**** xref:samples/solution/snap-in/control.adoc[]
+*** xref:samples/solution/installer/new-installer.adoc[]
+**** xref:samples/solution/installer/client.adoc[]
+**** xref:samples/solution/installer/server.adoc[]
+*** xref:samples/solution/update.adoc[]
+*** xref:samples/solution/license.adoc[]
 ** xref:samples/wincl-nav-extension.adoc[]
-** xref:DM_TM_Question.adoc[]
-* xref:api/Intro.adoc[]
+** xref:samples/faq.adoc[]
+* xref:api/class-lib.adoc[]
 ** xref:api/DocsVision/DocsVision_NS.adoc[]
 *** xref:api/DocsVision/ApprovalDesigner/ApprovalDesigner_NS.adoc[]
 **** xref:api/DocsVision/ApprovalDesigner/ObjectModel/ObjectModel_NS.adoc[]
