--- a/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ApprovalDesigner_NS.adoc
+++ b/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ApprovalDesigner_NS.adoc
@@ -1,6 +1,6 @@
 = DocsVision.ApprovalDesigner -- пространство имен
 
-Пространство имен DocsVision.ApprovalDesigner содержит типы и методы приложения _Конструктор согласований_.
+Пространство имен `DocsVision.ApprovalDesigner` содержит типы и методы приложения _Конструктор согласований_.
 
 == Пространства имен
 
@@ -12,10 +12,10 @@
 
 == Заметки
 
-Для возможности получения или создания сущностей пространства имен DocsVision.ApprovalDesigner в xref:samples/object-model/init-context.adoc[контексте объектов] помимо стандартных должны быть зарегистрированы дополнительные фабрики из сборки `DocsVision.ApprovalDesigner.ObjectModel.dll`:
+Для возможности получения или создания сущностей пространства имен `DocsVision.ApprovalDesigner` в xref:samples/object-model/init-context.adoc[контексте объектов] помимо стандартных должны быть зарегистрированы дополнительные фабрики из сборки `DocsVision.ApprovalDesigner.ObjectModel.dll`:
 
-* фабрика преобразователей данных ApprovalDesignerMapperFactory
-* и фабрика сервисов ApprovalDesignerServiceFactory
+* Фабрика преобразователей данных `ApprovalDesignerMapperFactory`.
+* Фабрика сервисов `ApprovalDesignerServiceFactory`.
 
 [source,csharp]
 ----
