--- a/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/ObjectModel_NS.adoc
+++ b/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/ObjectModel_NS.adoc
@@ -7,7 +7,7 @@
 [cols=",",options="header"]
 |===
 |Пространство имен |Описание
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel.Services] |Пространство имен DocsVision.ApprovalDesigner.ObjectModel.Services содержит методы публичной функциональности Конструктора согласований.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel.Services] |Пространство имен `DocsVision.ApprovalDesigner.ObjectModel.Services` содержит методы публичной функциональности Конструктора согласований.
 |===
 
 == Классы
@@ -15,13 +15,13 @@
 [cols=",",options="header"]
 |===
 |Класс |Описание
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalFilesCreator_CL.adoc[ApprovalFilesCreator] |Класс ApprovalFilesCreator содержит статический метод для добавления файлов в карточку Согласование.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalFilesCreator_CL.adoc[ApprovalFilesCreator] |Класс `ApprovalFilesCreator` содержит статический метод для добавления файлов в карточку Согласование.
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalPath_CL.adoc[ApprovalPath] |Объектная модель карточки Маршрут согласования
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalPathMainInfo_CL.adoc[ApprovalPathMainInfo] |Содержит основную информацию карточки Маршрут согласования
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalPathRoadMap_CL.adoc[ApprovalPathRoadMap] |Представляет карту этапов Маршрута согласования.
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalPathState_CL.adoc[ApprovalPathState] |Представляет состояние документа в Маршруте согласования.
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalResult_CL.adoc[ApprovalResult] |Представляет результат согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalResultMainInfo_CL.adoc[ApprovalResultMainInfo] |Содержит основную информацию карточки Результат согласования.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalResultMainInfo_CL.adoc[ApprovalResultMainInfo] |Содержит основную информацию карточки _Результат согласования_.
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalStage_CL.adoc[ApprovalStage] |Этап согласования в карте этапов Маршрута согласования.
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalStageAdditionalSettings_CL.adoc[ApprovalStageAdditionalSettings] |Содержит дополнительные настройки этапа согласования.
 |xref:api/DocsVision/ApprovalDesigner/ObjectModel/ApprovalStageApprover_CL.adoc[ApprovalStageApprover] |Представляет согласующего этапа согласования.
@@ -36,7 +36,7 @@
 [cols=",",options="header"]
 |===
 |Интерфейс |Описание
-|ISearchWordsManager |Содержит метод, возвращающий описание поискового слова по его идентификатору.
+|`ISearchWordsManager` |Содержит метод, возвращающий описание поискового слова по его идентификатору.
 |===
 
 == Перечисления
