--- a/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalPathService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalPathService_IN.adoc
@@ -1,8 +1,8 @@
 = IApprovalPathService -- интерфейс
 
-Сервис IApprovalPathService предоставляет методы для работы с маршрутами согласования.
+Сервис `IApprovalPathService` предоставляет методы для работы с маршрутами согласования.
 
-* *Пространство имен:* xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel.Services]
+* *Пространство имен:* xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[`DocsVision.ApprovalDesigner.ObjectModel.Services`]
 * *Сборка:* `DocsVision.ApprovalDesigner.ObjectModel.dll`
 
 == Синтаксис
