--- a/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalResultService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalResultService_IN.adoc
@@ -1,6 +1,6 @@
 = IApprovalResultService -- интерфейс
 
-Сервис IApprovalResultService предоставляет метод для добавления результата согласования.
+Сервис `IApprovalResultService` предоставляет метод для добавления результата согласования.
 
 * *Пространство имен:* xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel.Services]
 * *Сборка:* `DocsVision.ApprovalDesigner.ObjectModel.dll`
