--- a/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc
+++ b/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc
@@ -1,15 +1,15 @@
 = DocsVision.ApprovalDesigner.ObjectModel.Services -- пространство имен
 
-Пространство имен DocsVision.ApprovalDesigner.ObjectModel.Services содержит методы публичной функциональности Конструктора согласований.
+Пространство имен `DocsVision.ApprovalDesigner.ObjectModel.Services` содержит методы публичной функциональности Конструктора согласований.
 
 == Интерфейсы
 
 [cols=",",options="header"]
 |===
 |Интерфейс |Описание
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalPathService_IN.adoc[IApprovalPathService] |Сервис IApprovalPathService предоставляет методы для работы с маршрутами согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalResultService_IN.adoc[IApprovalResultService] |Сервис IApprovalResultService предоставляет метод для добавления результата согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalService_IN.adoc[IApprovalService] |Сервис IApprovalService предоставляет методы для добавления согласующих в этап согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService_IN.adoc[IApprovalStageService] |Сервис IApprovalStageService предоставляет методы для работы с этапами согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/ISearchWordResolverService_IN.adoc[ISearchWordResolverService] |Сервис ISearchWordResolverService предоставляет метод получения согласующих по поисковому слову.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalPathService_IN.adoc[IApprovalPathService] |Сервис `IApprovalPathService` предоставляет методы для работы с маршрутами согласования.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalResultService_IN.adoc[IApprovalResultService] |Сервис `IApprovalResultService` предоставляет метод для добавления результата согласования.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalService_IN.adoc[IApprovalService] |Сервис `IApprovalService` предоставляет методы для добавления согласующих в этап согласования.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService_IN.adoc[IApprovalStageService] |Сервис `IApprovalStageService` предоставляет методы для работы с этапами согласования.
+|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/ISearchWordResolverService_IN.adoc[ISearchWordResolverService] |Сервис `ISearchWordResolverService` предоставляет метод получения согласующих по поисковому слову.
 |===
