--- a/modules/ROOT/pages/development.adoc
+++ b/modules/ROOT/pages/development.adoc
@@ -6,7 +6,7 @@
 * Разработка новых типов карточек.
 * Основы разработки расширений и модулей для платформы и приложения _Workflow_.
 
-Примеры могут сопровождаться или не сопровождаться описанием задействованных в примере сущностей API {dv}. В любом случае для получения справочной информации об объектах API {dv} рекомендуется обращаться к их описанию, приведенному в разделе xref:api/Intro.adoc[].
+Примеры могут сопровождаться или не сопровождаться описанием задействованных в примере сущностей API {dv}. В любом случае для получения справочной информации об объектах API {dv} рекомендуется обращаться к их описанию, приведенному в разделе xref:api/class-lib.adoc[].
 
 Все примеры, за исключением тех случаев, когда указано иное, разработаны на языке C# в среде разработки Visual Studio.
 
