--- a/modules/ROOT/pages/links.adoc
+++ b/modules/ROOT/pages/links.adoc
@@ -2,7 +2,7 @@
 
 Ссылка -- это специальный тип поля, которое ссылается на другую карточку (тип `RefCardID`) или на строку другой секции (`RefID`).
 
-Ссылка на карточку может быть одного из четырех типов: простая, слабая, сильная и автоматическая. Тип ссылки задаётся в описании карточки и, следовательно, устанавливается один раз для всех экземпляров карточки такого типа. Управлять поведением ссылки во время исполнения нельзя.
+Ссылка на карточку может быть одного из четырёх типов: простая, слабая, сильная и автоматическая. Тип ссылки задаётся в описании карточки и, следовательно, устанавливается один раз для всех экземпляров карточки такого типа. Управлять поведением ссылки во время исполнения нельзя.
 
 .Тип ссылки влияет на поведение сервера в следующих случаях:
 * При изменении значения ссылочного поля.
