--- a/modules/ROOT/pages/samples/solution/card-lib/lib-component.adoc
+++ b/modules/ROOT/pages/samples/solution/card-lib/lib-component.adoc
@@ -42,19 +42,18 @@
 . Измените скрипт регистрации `CardLib.rgs`:
 +
 * В `CLSID` и `ForceRemove` нужно указать _идентификатор компонента библиотеки карточек_, который был указан при разработке схемы библиотеки карточек в параметре `Activation string`.
-* В `TypeLib` нужно указать произвольный (сгенерировать самостоятельно) _идентификатор библиотеки типов_:
-* Заменить `NetstatSolution` на собственное название для регистрации COM-компонента.
+* В `TypeLib` нужно указать произвольный (сгенерировать самостоятельно) _идентификатор библиотеки типов_ -- заменить `NetstatSolution` на собственное название для регистрации COM-компонента.
 +
 . В файле `CardLib.def` укажите название файла сборки.
 . В файле `CardLib.idl` необходимо указать _идентификатор компонента библиотеки карточек_ и _идентификатор библиотеки типов_, которые были использованы на шаге 3.
 . В файле `CardLibInfo.cpp`:
 +
-* В массиве `GetCardType.Cards` перечислите идентификаторы всех карточек библиотеки (соблюдайте формат), их схемы (название ресурса) и иконки;
+* В массиве `GetCardType.Cards` перечислите идентификаторы всех карточек библиотеки (соблюдайте формат), их схемы (название ресурса) и иконки.
 * В методе `get_Version` в `sCardLibDef` нужно указать собственное название ресурса со схемой библиотеки карточек.
 +
 . В свойствах проекта укажите необходимое название для сборки.
 
 [NOTE]
 ====
-Если Вы работаете с исходными кодами проекта, то компонент библиотеки карточки собирается вторым.
+Если вы работаете с исходными кодами проекта, то компонент библиотеки карточки собирается вторым.
 ====
