--- a/modules/ROOT/pages/samples/solution/create-solution.adoc
+++ b/modules/ROOT/pages/samples/solution/create-solution.adoc
@@ -43,14 +43,14 @@
 * `Binaries` -- каталог для размещения готовых сборок.
 * `CardDefs` -- каталог со схемами карточки _учета сетевого оборудования_ и библиотеки _Модуля учета сетевых устройств_, а также их ресурсами.
 * `CardLib` -- каталог с проектом (C++) компонента библиотеки карточек.
-* `CardPackage` -- каталог с данными справочников и конструкторов, выгруженных из базы данных {dv}. Используются на этапе xref:CreatePackages.adoc[Формирование "CardPackage" и "SqlPackage"].
-* `Database` -- каталог с файлом, определяющим путь к файлу с метаданными библиотеки карточек. Используются на этапе xref:CreatePackages.adoc[Формирование "CardPackage" и "SqlPackage"].
+* `CardPackage` -- каталог с данными справочников и конструкторов, выгруженных из базы данных {dv}. Используются на этапе xref:samples/solution/card-sql-package.adoc[Формирование "CardPackage" и "SqlPackage"].
+* `Database` -- каталог с файлом, определяющим путь к файлу с метаданными библиотеки карточек. Используются на этапе xref:samples/solution/card-sql-package.adoc[Формирование "CardPackage" и "SqlPackage"].
 * `Installers` -- каталог сборки пакетов установки.
 * `NetstatSolution.Snapin` -- каталог с проектом модуля расширения _Консоли настройки_ Docsvision.
 * `NetstatSolutionCard` -- каталог с проектом компонента карточки, а также его объектной моделью.
 * `NetstatSolutionClientInstaller` -- каталог с проектом пакета установки клиентской части _решения_.
 * `NetstatSolutionInstaller` -- каталог с проектом пакета установки серверной части _решения_.
-* `Other` -- в данном каталоге содержится утилита _CardTypeExtractor_, которая будет использована на этапе xref:CreatePackages.adoc[Формирование "CardPackage" и "SqlPackage"].
+* `Other` -- в данном каталоге содержится утилита _CardTypeExtractor_, которая будет использована на этапе xref:samples/solution/card-sql-package.adoc[Формирование "CardPackage" и "SqlPackage"].
 
 [NOTE]
 ====
