--- a/modules/ROOT/pages/samples/solution/installer/client.adoc
+++ b/modules/ROOT/pages/samples/solution/installer/client.adoc
@@ -7,19 +7,20 @@
 
 Пакет установки клиентской части _решения_ устанавливается на рабочем месте сотрудника, и отвечает за установку и регистрацию компонентов карточек и библиотеки карточек. Клиентская часть устанавливается автоматически при открытии _{wincl}а_, если компонент библиотеки карточек не зарегистрирован.
 
-Типовой сценарий установки клиентской части:
-
+.Типовой сценарий установки клиентской части:
 . Создать подкаталог _решения_ в каталоге {wincl}а.
 +
 [IMPORTANT]
 ====
-Крайне желательно соблюсти правило размещения компонентов в каталоге {wincl}а: `\{Каталог {wincl}а}/\{Название решения}`.
+Крайне желательно соблюсти правило размещения компонентов в каталоге {wincl}а: `Каталог-{wincl}а\Название-решения`.
 ====
++
 . Распаковать компоненты карточки и библиотеки карточек из пакета установки в созданный подкаталог.
 . Зарегистрировать распакованные компоненты.
-* компонент карточки не регистрируется;
-* компонент библиотеки карточек регистрируется командой: `regsvr32.exe \{Путь к файлу компонента}` (файл должен быть доступен всем пользователям) -- данная команда пишет в общую ветку реестра, для чего требуются права администратора. Можно зарегистрировать компонент для текущего пользователя, но для этого потребуется самостоятельно реализовать скрипт для регистрации COM-компонента в ветке реестра HKCU.
-. Создать в ветке реестра `HKEY_CURRENT_USER\SOFTWARE\DocsVision\Platform\5.5\Client\Applications` строковый параметр с названием _решения_, в значении должно быть указано название созданного подкаталога:
++
+* Компонент карточки не регистрируется.
+* Компонент библиотеки карточек регистрируется командой: `regsvr32.exe Путь-к-файлу-компонента` (файл должен быть доступен всем пользователям) -- данная команда пишет в общую ветку реестра, для чего требуются права администратора. Можно зарегистрировать компонент для текущего пользователя, но для этого потребуется самостоятельно реализовать скрипт для регистрации COM-компонента в ветке реестра `HKEY_CURRENT_USER`.
+. Создать в ветке реестра `HKEY_CURRENT_USER\SOFTWARE\DocsVision\Platform\5.5\Client\Applications` строковый параметр с названием _решения_. В значении должно быть указано название созданного подкаталога:
 +
 [source,xml]
 ----
@@ -42,8 +43,7 @@
 <Product Id="22CE4047-0BA8-4014-9BBE-7D8C43FDE907"
 ----
 
-Чтобы клиентская часть поддерживала обновление, добавляем:
-
+.Чтобы клиентская часть поддерживала обновление, добавляем:
 [source,charp]
 ----
 <MajorUpgrade DowngradeErrorMessage="Более новая версия продукта [ProductName] уже установлена." />
@@ -66,5 +66,5 @@
 
 [NOTE]
 ====
-Если Вы работаете с исходными кодами проекта, то пакет установки клиентской части собирается четвертым.
+Если вы работаете с исходными кодами проекта, то пакет установки клиентской части собирается четвертым.
 ====
