--- a/modules/ROOT/pages/samples/solution/snap-in/control.adoc
+++ b/modules/ROOT/pages/samples/solution/snap-in/control.adoc
@@ -11,10 +11,9 @@ image::ServerConsole.PNG[image]
 Для работы с карточками _учета сетевого оборудования_ требуется лицензионный ключ: введите в поле _Лицензионный ключ_ значение "ЛИЦЕНЗИЯ".
 ====
 
-Интерфейс управления для расширения *консоли настройки* -- это обычный WinForms элемент управления (типа System.Windows.Forms.UserControl), в котором реализован интерфейс IConsoleControl (сборка `DocsVision.Tools.ServerConsole.Interfaces.dll`).
+Интерфейс управления для расширения консоли настройки -- это обычный WinForms элемент управления (типа `System.Windows.Forms.UserControl`), в котором реализован интерфейс `IConsoleControl` (сборка `DocsVision.Tools.ServerConsole.Interfaces.dll`).
 
-Интерфейс IConsoleControl добавляет:
-
+.Интерфейс `IConsoleControl` добавляет:
 * Свойство `Changed`, которое возвращает признак наличие изменений в данных. При закрытии формы, при наличии изменений, будет выдано предупреждение о необходимости сохранения данных.
 +
 [source,csharp]
@@ -32,6 +31,7 @@ public bool Changed
  }
 }
 ----
++
 * Свойство _Valid_, которое возвращает результат проверки данных на наличии ошибок. Проверка выполняется при закрытии формы. Алгоритм верификации данных разрабатывается самостоятельно.
 +
 [source,csharp]
@@ -43,13 +43,15 @@ public bool Valid
   bool result = true;
   if (Admin_eMail.Text.Contains("@") = false)
   { 
-   result = false; // Возвращаем ошибку, если e-mail некорректен
+   result = false; <.>
   }
   return result;
  }
 }
 ----
-* Свойство `Caption` -- название модуля, которое отображается в узле *Модули расширения* _Консоли настройки_.
+<.> Возвращаем ошибку, если e-mail некорректен.
++
+* Свойство `Caption` -- название модуля, которое отображается в узле _Модули расширения_ _Консоли настройки_.
 +
 [source,csharp]
 ----
@@ -58,6 +60,7 @@ public string Caption
  get { return "Модуль учета сетевых устройств"; }
 }
 ----
++
 * Свойство `Instance` -- должно возвращать экземпляр класса, реализующего элемент управления.
 +
 [source,csharp]
@@ -67,7 +70,8 @@ public UserControl Instance
  get { return this; }
 }
 ----
-* Метод Execute -- вызывается при сохранении данных. Данный метод будет вызван, если на запрос сохранения данных, был получен утвердительный ответ.
++
+* Метод `Execute` -- вызывается при сохранении данных. Данный метод будет вызван, если на запрос сохранения данных, был получен утвердительный ответ.
 +
 [source,csharp]
 ----
@@ -89,7 +93,8 @@ public bool Execute()
  return true;
 }
 ----
-* Метод Initialize -- отвечает за предварительную загрузку данных и другие подготовительные действия; вызывается перед открытием формы.
++
+* Метод `Initialize` -- отвечает за предварительную загрузку данных и другие подготовительные действия. Вызывается перед открытием формы.
 +
 [source,csharp]
 ----
@@ -104,4 +109,5 @@ public void Initialize()
  isChanged = false;
 }
 ----
-* Генерация событие ControlChanged позволяет уведомить _Консоль настройки_ об изменении данных, что активирует кнопку сохранения данных. Если самостоятельно не вызвать данный метод, сохранить данные можно будет только при закрытии формы, при появлении соответствующего запроса.
++
+* Генерация событие `ControlChanged` позволяет уведомить _Консоль настройки_ об изменении данных, что активирует кнопку сохранения данных. Если самостоятельно не вызвать данный метод, сохранить данные можно будет только при закрытии формы, при появлении соответствующего запроса.
