--- a/modules/ROOT/pages/solutions/cards/scheme/dev-data-scheme.adoc
+++ b/modules/ROOT/pages/solutions/cards/scheme/dev-data-scheme.adoc
@@ -20,7 +20,7 @@ image::section-kinds.png[Виды секций]
 
 Кроме этого, схема карточки описывает возможные действия карточки с указанием их уникальных идентификаторов, режимы работы карточки -- возможные варианты отображения её пользовательского интерфейса, преобразования данных карточки -- варианты трансформации данных в другой формат при помощи XSLT и InfoPath-преобразований.
 
-.Разработка схемы карточки состоит из четырех основных этапов:
+.Разработка схемы карточки состоит из четырёх основных этапов:
 * Подготовка базы данных.
 * Подготовка библиотеки карточек.
 * Создание и редактирование схемы данных.
