--- a/modules/ROOT/pages/views/data-description.adoc
+++ b/modules/ROOT/pages/views/data-description.adoc
@@ -71,7 +71,7 @@ element.MergeVirtualField(savedField.Export(), "Performers", "Performers"); <.>
 
 [NOTE]
 ====
-При построении представления можно использовать псевдонимы трех предопределённых секций:
+При построении представления можно использовать псевдонимы трёх предопределённых секций:
 
 * `Main` -- базовая секция представления.
 * `Inst` -- строка из системной таблицы *dvsys_instances*, соответствующая текущей карточке.
