--- a/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalService_IN.adoc
@@ -1,8 +1,8 @@
 = IApprovalService -- интерфейс
 
-Сервис IApprovalService предоставляет методы для добавления согласующих в этап согласования.
+Сервис `IApprovalService` предоставляет методы для добавления согласующих в этап согласования.
 
-* *Пространство имен:* xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel.Services]
+* *Пространство имен:* xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[`DocsVision.ApprovalDesigner.ObjectModel.Services`]
 * *Сборка:* `DocsVision.ApprovalDesigner.ObjectModel.dll`
 
 == Синтаксис
