--- a/modules/ROOT/pages/samples/solution/card-lib/card-component.adoc
+++ b/modules/ROOT/pages/samples/solution/card-lib/card-component.adoc
@@ -7,13 +7,13 @@
 
 Поскольку пример разработки компонента карточки приведен в разделе xref:solutions/cards/card-component/component.adoc[Разработка компонента карточки], а также в статье https://docsvision.zendesk.com/entries/79607235[Создание карточек в {dv} 5],здесь отмечены только ключевые моменты его реализации для _Модуля учета сетевых устройств_.
 
-Реализация интерфейса карточки в компоненте не планируется, вместо этого в _Конструкторе разметок_ будет настроена её разметка, с последующей выгрузкой этих настроек (рассмотрено в разделе xref:CreatePackages.adoc[Формирование "CardPackage" и "SqlPackage"]) для размещения в пакете установки. Чтобы разметка карточки могла быть настроена в конструктора, класс компонента карточки отмечен специальным атрибутом `Customizable`.
+Реализация интерфейса карточки в компоненте не планируется, вместо этого в _Конструкторе разметок_ будет настроена её разметка, с последующей выгрузкой этих настроек (рассмотрено в разделе xref:samples/solution/card-sql-package.adoc[Формирование "CardPackage" и "SqlPackage"]) для размещения в пакете установки. Чтобы разметка карточки могла быть настроена в конструктора, класс компонента карточки отмечен специальным атрибутом `Customizable`.
 
 В конструктор класса компонента карточки добавим простой алгоритм проверки лицензионного ключа, значение которого считывается из реестра Windows. Для ввода лицензионного ключа предполагается использовать _SnapIn_, который будет разработан позднее.
 
 [NOTE]
 ====
-Проверку лицензии, при необходимости, можно реализовать несколькими методами (см. xref:License.adoc[Лицензирование]).
+Проверку лицензии, при необходимости, можно реализовать несколькими методами (см. xref:samples/solution/license.adoc[Лицензирование]).
 ====
 
 Класс компонента должен быть отмечен атрибутом `Guid`, значение которого соответствует _Идентификатору COM-компонента карточки_ (см. xref:samples/solution/card-lib/card-metadata-scheme.adoc[Создание схемы метаданных карточки]).
