--- a/modules/ROOT/pages/samples/solution/card-lib/lib-metadata-scheme.adoc
+++ b/modules/ROOT/pages/samples/solution/card-lib/lib-metadata-scheme.adoc
@@ -11,7 +11,7 @@
 image::library-tab-fill.png[Заполнение вкладки "Library"]
 
 .На вкладке "Library" заполняем:
-* _ID_ -- идентификатор библиотеки карточек. Помимо схемы метаданных, задействован при xref:CreateSnapIn.adoc[разработке] компонента `SnapIn`.
+* _ID_ -- идентификатор библиотеки карточек. Помимо схемы метаданных, задействован при xref:samples/solution/snap-in/new-snap-in.adoc[разработке] компонента `SnapIn`.
 * _Activation string_ -- строка активации, которая включает идентификатор компонента библиотеки карточек. Данный идентификатор также задействован при xref:samples/solution/card-lib/lib-component.adoc[разработке] компонента библиотеки карточек.
 * _Version_ -- версия библиотеки карточек. Также используется в компоненте библиотеки.
 
@@ -19,13 +19,13 @@ image::library-tab-fill.png[Заполнение вкладки "Library"]
 image::installers-tab-fill.png[Заполнение вкладки "Library"]
 
 .На вкладке "Installers" указываем:
-* _Package ID_ -- идентификатор пакета установки, используемый при регистрации пакета установки на сервере {dv} (рассмотрено в разделе xref:CreateSnapIn.adoc[Создание расширения для Консоли настройки]).
+* _Package ID_ -- идентификатор пакета установки, используемый при регистрации пакета установки на сервере {dv} (рассмотрено в разделе xref:samples/solution/snap-in/new-snap-in.adoc[Создание расширения для Консоли настройки]).
 +
 При необходимости (например, если клиентская часть не установлена), {wincl} запрашивает пакет установки с заданным идентификатором из общего списка пакетов, зарегистрированных на сервере {dv}. Идентификатор пакета является постоянным для пакета установки.
 +
 * _Installer_ -- относительный путь (относительно каталога `C:\Program Files (x86)\Docsvision\Platform\5.5\Site\Setup`) к пакету установки клиентской части.
 +
-Пакет установки клиентской части будет разработан xref:CreateInstaller_Client.adoc[позже], но можно указать расположение заранее, либо вернуться к настройке данного параметра позже. Название подкаталога (здесь `NetstatSolutionClient`) определяется исходя из названия установочного файла.
+Пакет установки клиентской части будет разработан xref:samples/solution/installer/client.adoc[позже], но можно указать расположение заранее, либо вернуться к настройке данного параметра позже. Название подкаталога (здесь `NetstatSolutionClient`) определяется исходя из названия установочного файла.
 +
 * _Product Code_ -- код продукта, который соответствует коду продукта в самом пакете установки. Данный идентификатор используется при регистрации клиентской части установки в _SnapIn_, а также в проекте пакета установки клиентской части.
 +
