--- a/modules/ROOT/pages/samples/solution/installer/server.adoc
+++ b/modules/ROOT/pages/samples/solution/installer/server.adoc
@@ -7,16 +7,15 @@
 
 Пакет установки серверной части включает в себя все разработанные ранее компоненты, в том числе пакет установки клиентской части. Данный установщик отвечает за весь цикл регистрации и удаления решения.
 
-Далее перечислены основные шаги, которые должен выполнить пакет установки серверной части _решения_:
-
+.Далее перечислены основные шаги, которые должен выполнить пакет установки серверной части решения:
 . Создать подкаталог _решения_ в папке {dv} (по умолчанию `C:\Program Files (x86)\Docsvision`).
 . Выгрузить в созданный подкаталог компонент _SnapIn_ и пакет установки клиентской части _решения_.
-. Создать в каталоге _решения_ подкаталог `CardPackage` и выгрузить в него xref:CreatePackages.adoc[CardPackage], а также связанные с ним XML-файлы.
-. Создать в каталоге _решения_ подкаталог `Database` и выгрузить в него xref:CreatePackages.adoc[SqlPackage], а также схемы карточек и библиотека карточек, а также их ресурсы.
+. Создать в каталоге _решения_ подкаталог `CardPackage` и выгрузить в него xref:samples/solution/card-sql-package.adoc[`CardPackage`], а также связанные с ним XML-файлы.
+. Создать в каталоге _решения_ подкаталог `Database` и выгрузить в него xref:samples/solution/card-sql-package.adoc[`SqlPackage`], а также схемы карточек и библиотека карточек, а также их ресурсы.
 . В ветке реестра `{hklm}\SOFTWARE\DocsVision\Platform\5.5\Console\SnapIns` создать раздел с названием решения.
 . В созданный раздел добавить два строковых параметра:
-* Path -- путь к сборке SnapIn.
-* TypeName -- название класса SnapIn, который реализует интерфейс ISnapIn#.
+* `Path` -- путь к сборке _SnapIn_.
+* `TypeName` -- название класса _SnapIn_, который реализует интерфейс `ISnapIn`.
 +
 [source,xml]
 ----
@@ -27,6 +26,7 @@
  </RegistryKey>
 </Component>
 ----
++
 . Вызвать {cns} с параметрами: `"C:\Program Files (x86)\Docsvision\Platform\5.5\Tools\ServerConsole.exe" /c /n \{Название решения}`. В проекте пакета установки серверной части за это отвечает сценарий:
 +
 [source,charp]
@@ -38,8 +38,9 @@
 </InstallExecuteSequence>
 ----
 
-При удалении решения, необходимо вызвать _Консоль настройки_ {dv} с параметрами: `"C:\Program Files (x86)\Docsvision\Platform\5.5\Tools\ServerConsole.exe" /rs /n \{Название решения}`. В проекте пакета установки серверной части за это отвечает сценарий:
+При удалении решения, необходимо вызвать _Консоль настройки_ {dv} с параметрами: `"C:\Program Files (x86)\Docsvision\Platform\5.5\Tools\ServerConsole.exe" /rs /n Название-решения`.
 
+.В проекте пакета установки серверной части за это отвечает сценарий:
 [source,charp]
 ----
 <CustomAction Id="UnRegisterSnapIn" Directory='INSTALLFOLDER' Return="ignore" Execute='deferred' 
@@ -49,8 +50,7 @@
 </InstallExecuteSequence>
 ----
 
-Чтобы серверная часть поддерживала обновление, добавляем:
-
+.Чтобы серверная часть поддерживала обновление, добавляем:
 [source,charp]
 ----
  <MajorUpgrade DowngradeErrorMessage="Более новая версия продукта [ProductName] уже установлена." />
@@ -72,7 +72,7 @@
 
 [NOTE]
 ====
-Если Вы работаете с исходными кодами проекта, то пакет установки серверной части собирается последним.
+Если вы работаете с исходными кодами проекта, то пакет установки серверной части собирается последним.
 ====
 
 Фактически данный шаг является заключительным: после сборки, пакет может быть установлен на сервер для всестороннего тестирования. Клиентская часть устанавливается автоматически при запуске {wincl}а.
