--- a/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService_IN.adoc
+++ b/modules/ROOT/pages/api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService_IN.adoc
@@ -2,7 +2,7 @@
 
 Сервис IApprovalStageService предоставляет методы для работы с этапами согласования.
 
-* *Пространство имен:* xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel.Services]
+* *Пространство имен:* `xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/Services_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel.Services]`
 * *Сборка:* `DocsVision.ApprovalDesigner.ObjectModel.dll`
 
 == Синтаксис
@@ -14,18 +14,26 @@ public interface IApprovalStageService
 
 == Методы
 
-[cols=",",options="header"]
+[cols="34,66",options="header"]
+|===
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddDecision_MT.adoc[AddDecision(ApprovalStage)]`
+|j
+
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.ReorderSelectedApprovers_MT.adoc[ReorderSelectedApprovers(ObjectCollection<ApprovalStageApprover>)]` |Сортирует список, содержащий согласующих, по порядковому номеру согласующего.
+|===
+
+[cols="34,66",options="header"]
 |===
 |Имя |Описание
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddDecision_MT.adoc[AddDecision(ApprovalStage)] |Добавляет решение для этапа маршрута согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_MT.adoc[AddSelectedApprover(ApprovalStage, Guid)] |Добавляет согласующего по поисковому слову в этап согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_1_MT.adoc[AddSelectedApprover(ApprovalStage, StaffEmployee)] |Добавляет согласующего сотрудника в этап согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_2_MT.adoc[AddSelectedApprover(ApprovalStage, StaffGroup)] |Добавляет согласующих из группы в этап согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_3_MT.adoc[AddSelectedApprover(ApprovalStage, StaffRole)] |Добавляет согласующих из роли в этап согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_4_MT.adoc[AddSelectedApprover(ApprovalStage, StaffUnit)] |Добавляет согласующих из подразделения в этап согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddState_MT.adoc[AddState(ApprovalStage)] |Добавляет состояние для этапа согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.CopyApproversFromDocument_MT.adoc[CopyApproversFromDocument(ApprovalStage, Document)] |Получает согласующих из согласуемого документа.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.CreateApprover_MT.adoc[CreateApprover(StaffEmployee)] |Создает согласующего без добавления в этап согласования.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.ReorderDecisions_MT.adoc[ReorderDecisions(ObjectCollection<ApprovalStageDecision>)] |Сортирует список, содержащий решения по согласованию, по порядковому номеру решения.
-|xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.ReorderSelectedApprovers_MT.adoc[ReorderSelectedApprovers(ObjectCollection<ApprovalStageApprover>)] |Сортирует список, содержащий согласующих, по порядковому номеру согласующего.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddDecision_MT.adoc[AddDecision(ApprovalStage)]` |Добавляет решение для этапа маршрута согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_MT.adoc[AddSelectedApprover(ApprovalStage, Guid)]` |Добавляет согласующего по поисковому слову в этап согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_1_MT.adoc[AddSelectedApprover(ApprovalStage, StaffEmployee)]` |Добавляет согласующего сотрудника в этап согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_2_MT.adoc[AddSelectedApprover(ApprovalStage, StaffGroup)]` |Добавляет согласующих из группы в этап согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_3_MT.adoc[AddSelectedApprover(ApprovalStage, StaffRole)]` |Добавляет согласующих из роли в этап согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_4_MT.adoc[AddSelectedApprover(ApprovalStage, StaffUnit)]` |Добавляет согласующих из подразделения в этап согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.AddState_MT.adoc[AddState(ApprovalStage)]` |Добавляет состояние для этапа согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.CopyApproversFromDocument_MT.adoc[CopyApproversFromDocument(ApprovalStage, Document)]` |Получает согласующих из согласуемого документа.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.CreateApprover_MT.adoc[CreateApprover(StaffEmployee)]` |Создает согласующего без добавления в этап согласования.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.ReorderDecisions_MT.adoc[ReorderDecisions(ObjectCollection<ApprovalStageDecision>)]` |Сортирует список, содержащий решения по согласованию, по порядковому номеру решения.
+|`xref:api/DocsVision/ApprovalDesigner/ObjectModel/Services/IApprovalStageService.ReorderSelectedApprovers_MT.adoc[ReorderSelectedApprovers(ObjectCollection<ApprovalStageApprover>)]` |Сортирует список, содержащий согласующих, по порядковому номеру согласующего.
 |===
